# mcts-llm-alpha

./: .gitignore  CLAUDE.md  LICENSE  README.md  mcts_llm_full_v7_fixed.ipynb  mcts_llm_full_v7_fixed.py
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md  question.md
.github/workflows/: lint.yml  tests.yml
Artical/: Appendix.md  MTCS_LLM_Alpha.md  alpha_mtcs_cn.md
mcts-llm-alpha/: .env.example  .gitignore  README.md  pyproject.toml  run_search.py  test_fixes.py  test_ranking_fixes.py  test_rolling_fix.py
mcts-llm-alpha/docs/: MCTS_LLMALPHA_FIX_PLAN.md  architecture.md  architecture_cn.md  architecture_en.md  configuration.md  evaluation_system.md  quick_start.md  raw_metrics_display.md
mcts-llm-alpha/src/mcts_llm_alpha/: __init__.py  cli.py  utils.py
mcts-llm-alpha/src/mcts_llm_alpha/config/: __init__.py  config.py  default.yaml  scoring_config.py
mcts-llm-alpha/src/mcts_llm_alpha/evaluation/: __init__.py  cache.py  comprehensive.py  qlib_evaluator.py  relative_ranking.py
mcts-llm-alpha/src/mcts_llm_alpha/evaluation/metrics/: __init__.py  diversity.py  effectiveness.py  overfitting.py  stability.py  turnover.py
mcts-llm-alpha/src/mcts_llm_alpha/formula/: __init__.py  cleaner.py  fixer.py  validator.py
mcts-llm-alpha/src/mcts_llm_alpha/llm/: __init__.py  client.py  example_selector.py  overfitting_evaluator.py  performance_aware.py  prompts.py  wrapper.py
mcts-llm-alpha/src/mcts_llm_alpha/mcts/: __init__.py  fsa.py  node.py  search.py
mcts-llm-alpha/src/mcts_llm_alpha/utils/: __init__.py  colored_diff.py  formula_diff.py
wiki/: Home.md  Installation-Guide.md  MCTS-Algorithm.md
(+2 files in other folders)
